added LDAP support